--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
   margin: 0;
 }
 
+.d-none {
+  display: none !important;
+}
+
 body {
   height: 100vh;
   background-image: url('assets/img/5_background/background.jpg');
@@ -20,13 +24,35 @@ body {
   font-size: 37px;
 }
 
+.start img {
+  width: 720px;
+  height: 480px;
+  border-radius: 33px;
+  filter: drop-shadow(2px 4px 6px black);
+}
+
+.menu {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 28px;
+  background-image: url('assets/img/9_intro_outro_screens/start/wandet.jpg');
+  background-position: center;
+  background-size: cover;
+  width: 720px;
+  height: 480px;
+  border-radius: 33px;
+  filter: drop-shadow(2px 4px 6px rgba(0, 0, 0, 0.539));
+}
+
 .canvas-container {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  justify-content: center;
   height: 100%;
 }
 
-canvas {
+.canvas {
   border-radius: 33px;
   filter: drop-shadow(2px 4px 9px black);
 }
@@ -39,4 +65,25 @@ canvas {
 @font-face {
   font-family: 'eldorado-bold';
   src: url('assets/fonts/eldorado-bold.otf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Mexina-xRndO';
+  src: url('assets/fonts/Mexina-xRndO.otf') format('truetype');
+}
+
+.game-menu-content {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.fullScrenn-container {
+  position: relative;
+  bottom: 50px;
+  padding-left: 50px;
+}
+
+.fullScrenn-container img {
+  width: 32px;
 }
