--- a/css/button.css
+++ b/css/button.css
@@ -1,4 +1,4 @@
-.menu-play-container {
+.game-btn {
   display: flex;
   justify-content: center;
   width: 100%;
@@ -7,7 +7,7 @@
 
 button {
   position: relative;
-  top: 12px;
+  top: 22px;
   font-family: inherit;
   padding: 0.6em 1.3em;
   font-weight: 200;
