--- a/css/control.css
+++ b/css/control.css
@@ -4,6 +4,7 @@
   align-items: center;
   gap: 28px;
   width: 70%;
+  font-family: 'Mexina-xRndO', Arial, Helvetica, sans-serif;
   animation: control 0.7s ease-in-out 0s 1 normal forwards;
 }
 
