--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-* {
-  margin: 0;
-}
-
-.d-none {
-  display: none !important;
-}
-
 body {
   height: 100vh;
   background-image: url('assets/img/5_background/background.jpg');
@@ -15,13 +7,27 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow-y: hidden;
+  overflow-x: hidden;
   font-family: 'tacobox', Arial, Helvetica, sans-serif;
 }
 
 .headline {
   padding-top: 22px;
   font-size: 37px;
+}
+
+.canvas-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+}
+
+.canvas {
+  position: relative;
+  display: block;
+  border-radius: 33px;
+  filter: drop-shadow(2px 4px 9px black);
 }
 
 .start img {
@@ -31,15 +37,7 @@ body {
   filter: drop-shadow(2px 4px 6px black);
 }
 
-.ende {
-  position: absolute;
-  z-index: 10;
-  width: 720px;
-  height: 480px;
-  border-radius: 33px;
-}
-
-.menu {
+.info-menu {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -53,16 +51,47 @@ body {
   filter: drop-shadow(2px 4px 6px rgba(0, 0, 0, 0.539));
 }
 
-.canvas-container {
+#gameResult {
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  height: 100%;
+  align-items: center;
 }
 
-.canvas {
+.end-screen {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -47.5%);
+  z-index: 10;
+  width: 720px;
+  height: 484px;
   border-radius: 33px;
-  filter: drop-shadow(2px 4px 9px black);
+}
+
+.game-menu-content {
+  display: flex;
+  justify-content: right;
+  width: 100%;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  justify-content: end;
+  width: 100%;
+}
+
+.imprint {
+  padding: 8px 30px;
+  font-size: 18px;
+}
+
+.mobile {
+  display: flex;
+  justify-content: end;
+  position: relative;
+  bottom: 40px;
 }
 
 @font-face {
@@ -80,12 +109,32 @@ body {
   src: url('assets/fonts/Mexina-xRndO.otf') format('truetype');
 }
 
-.game-menu-content {
-  display: flex;
-  justify-content: right;
-  width: 100%;
+@media(max-width: 840px) {
+  h1 {
+    font-size: 1.5em;
+  }
 }
 
-.width-100 {
-  width: 100%;
+@media only screen and (max-width: 740px) {
+  .canvas {
+    width: 100%;
+    height: 100vh;
+  }
+
+  .start img {
+    width: 100%;
+    border-radius: 0;
+  }
+}
+
+@media only screen and (max-height: 480px) {
+  .canvas {
+    width: 100%;
+    height: 100vh;
+  }
+
+  .start img {
+    height: 100%;
+    border-radius: 0;
+  }
 }
