--- a/css/control.css
+++ b/css/control.css
@@ -37,3 +37,15 @@
   display: flex;
   flex-direction: column;
 }
+
+@media only screen and (max-width: 740px)  {
+  .control img {
+    width: 42px;
+  }
+}
+
+@media only screen and (max-height: 480px) {
+  .control img {
+    width: 42px;
+  }
+}
