--- a/css/home-page-button.css
+++ b/css/home-page-button.css
@@ -1,8 +1,8 @@
 .game-btn-content {
   display: flex;
   justify-content: center;
-  width: 100%;
   gap: 18px;
+  padding-top: 14px;
 }
 
 .game-btn {
@@ -42,6 +42,7 @@ button:hover {
 
 .mobile-btn-content {
   position: absolute;
+  top: 20px;
   z-index: 10;
   display: flex;
   justify-content: center;
@@ -51,8 +52,6 @@ button:hover {
 }
 
 .mobile-btn {
-  position: relative;
-  top: 40px;
   font-family: inherit;
   padding: 0.5em 1em;
   font-weight: 200;
