--- a/css/standart.css
+++ b/css/standart.css
@@ -9,3 +9,13 @@
 .width-100 {
   width: 100%;
 }
+
+.height-100 {
+  height: 100%;
+}
+
+.display-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
