--- a/css/control.css
+++ b/css/control.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 12px 0;
   gap: 28px;
   width: 70%;
   font-family: 'Mexina-xRndO', Arial, Helvetica, sans-serif;
