--- a/css/fullscreen.css
+++ b/css/fullscreen.css
@@ -10,11 +10,11 @@
 }
 
 .fullScrenn-sound-content {
-  display: flex;
   position: relative;
-  gap: 18px;
-  bottom: 40px;
-  padding-right: 50px;
+  display: flex;
+  justify-content: center;
+  top: 20px;
+  gap: 28px;
   cursor: pointer;
 }
 
