--- a/style.css
+++ b/style.css
@@ -100,6 +100,18 @@ footer {
   cursor: pointer;
 }
 
+.rotateScreen {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background-color: white;
+}
+
 .mobile {
   display: flex;
   justify-content: end;
