--- a/css/buttons.css
+++ b/css/buttons.css
@@ -187,3 +187,31 @@ button:hover {
     hsl(34deg 84% 66%) 100%
   );
 }
+
+.imprint-close-btn {
+  font-family: inherit;
+  padding: 0.3em 0.4em;
+  font-weight: 200;
+  font-size: 20px;
+  border: 3px solid black;
+  border-radius: 0.4em;
+  cursor: pointer;
+  background-image: linear-gradient(
+    0deg,
+    hsl(34deg 84% 66%) 0%,
+    hsl(34deg 83% 65%) 16%,
+    hsl(33deg 82% 64%) 24%,
+    hsl(32deg 81% 62%) 30%,
+    hsl(32deg 80% 61%) 35%,
+    hsl(31deg 79% 60%) 40%,
+    hsl(30deg 78% 58%) 45%,
+    hsl(30deg 77% 57%) 50%,
+    hsl(30deg 78% 58%) 55%,
+    hsl(31deg 79% 60%) 60%,
+    hsl(32deg 80% 61%) 65%,
+    hsl(32deg 81% 62%) 70%,
+    hsl(33deg 82% 64%) 76%,
+    hsl(34deg 83% 65%) 84%,
+    hsl(34deg 84% 66%) 100%
+  );
+}
