--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ footer {
 
 @font-face {
   font-family: 'tacobox';
-  src: url('assets/fonts/tacobox.TTf') format('truetype');
+  src: url('assets/fonts/tacobox.TTF') format('truetype');
 }
 
 @font-face {
