--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ footer {
   position: absolute;
   top: 0;
   z-index: 9999;
-  background-color: white;
+  background-color: rgb(0, 0, 0);
 }
 
 .mobile {
